# Smart-Menu

./: .gitignore  README.md  Smart Menu.spec  build.ps1  pyproject.toml  requirements.txt  run.py
smart_menu/: __init__.py  __main__.py  app.py  clipboard.py  config.py  dimmer.py  gamma.py  hotkeys.py  power.py  preferences.py  resources.py  startup.py  tray.py  widgets.py  winutil.py
